--- a/monogame-stepbystep/LoadSprite/LoadSprite/LoadSprite.csproj
+++ b/monogame-stepbystep/LoadSprite/LoadSprite/LoadSprite.csproj
@@ -50,6 +50,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Content\1.jpg">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <Content Include="Icon.ico" />
   </ItemGroup>
   <ItemGroup>
