--- a/monogame-stepbystep/LoadSprite/LoadSprite/LoadSprite.csproj
+++ b/monogame-stepbystep/LoadSprite/LoadSprite/LoadSprite.csproj
@@ -53,7 +53,12 @@
     <None Include="Content\1.jpg">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <Content Include="Content\background.wav" />
+    <Content Include="Content\explode.wav" />
     <Content Include="Icon.ico" />
+    <None Include="Content\explode.xnb">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <MonoGameContentReference Include="Content\Content.mgcb" />
