--- a/monogame-stepbystep/MonoUsingOpengl/MonoUsingOpengl/MonoUsingOpengl.csproj
+++ b/monogame-stepbystep/MonoUsingOpengl/MonoUsingOpengl/MonoUsingOpengl.csproj
@@ -57,6 +57,9 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Icon.ico" />
+    <None Include="Content\1.jpg">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <Content Include="Content\background.wav" />
     <Content Include="Content\explode.wav" />
     <Content Include="OpenTK.dll.config">
