--- a/MainProject/PlatformReading/PlatformReading/PlatformReading.csproj
+++ b/MainProject/PlatformReading/PlatformReading/PlatformReading.csproj
@@ -67,6 +67,46 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Icon.ico" />
+    <Content Include="Content\2.txt" />
+    <Content Include="Content\Animation\fire_down.bmp" />
+    <Content Include="Content\Animation\fire_up.bmp" />
+    <Content Include="Content\Backgroud\b1.bmp" />
+    <Content Include="Content\Backgroud\b2.bmp" />
+    <Content Include="Content\Backgroud\b3.bmp" />
+    <Content Include="Content\Backgroud\b4.bmp" />
+    <Content Include="Content\Backgroud\b5.bmp" />
+    <Content Include="Content\Backgroud\b6.bmp" />
+    <Content Include="Content\GameMenu\gameover.png" />
+    <Content Include="Content\GameMenu\gamestart.png" />
+    <Content Include="Content\GameMenu\gameStartBackgroud.png" />
+    <Content Include="Content\GameMenu\help.jpg" />
+    <Content Include="Content\GameMenu\you_die.png" />
+    <Content Include="Content\GameMenu\you_win.png" />
+    <Content Include="Content\hole.bmp" />
+    <Content Include="Content\Level\0.txt" />
+    <Content Include="Content\Level\1.txt" />
+    <Content Include="Content\Level\2.txt" />
+    <Content Include="Content\Level\3.txt" />
+    <Content Include="Content\Level\4.txt" />
+    <Content Include="Content\Level\5.txt" />
+    <Content Include="Content\Level\result.txt" />
+    <Content Include="Content\Level\t.txt" />
+    <Content Include="Content\pad.gif" />
+    <Content Include="Content\pong.gif" />
+    <Content Include="Content\Sound\applause.wav" />
+    <Content Include="Content\Sound\background.wav" />
+    <Content Include="Content\Sound\explode.wav" />
+    <Content Include="Content\Sound\plop.wav" />
+    <Content Include="Content\Sound\pmetmgpwkk.wav" />
+    <Content Include="Content\Sound\sound.xap" />
+    <Content Include="Content\Sound\zap.wav" />
+    <Content Include="Content\Sprite\Block.bmp" />
+    <Content Include="Content\Sprite\Dollar.bmp" />
+    <Content Include="Content\Sprite\hole.bmp" />
+    <Content Include="Content\Sprite\pad.bmp" />
+    <Content Include="Content\Sprite\pong.png" />
+    <Content Include="Content\Sprite\space_background2006_2.jpg" />
+    <Content Include="Content\Sprite\toppad.bmp" />
     <Content Include="OpenTK.dll.config">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
@@ -75,7 +115,18 @@
     <MonoGameContentReference Include="Content\Content.mgcb" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Content\main.ini" />
+    <None Include="Content\Animation\Thumbs.db" />
+    <None Include="Content\Animation\vssver2.scc" />
+    <None Include="Content\Backgroud\vssver2.scc" />
+    <None Include="Content\Font\Hud.spritefont" />
+    <None Include="Content\Font\vssver2.scc" />
+    <None Include="Content\GameMenu\vssver2.scc" />
+    <None Include="Content\Level\vssver2.scc" />
+    <None Include="Content\main.ini">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="Content\Sound\vssver2.scc" />
+    <None Include="Content\Sprite\vssver2.scc" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
