--- a/iOS/PlatformReadingIos/PlatformReadingIos/Info.plist
+++ b/iOS/PlatformReadingIos/PlatformReadingIos/Info.plist
@@ -19,5 +19,13 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>UIDeviceFamily</key>
+	<array>
+		<integer>1</integer>
+	</array>
+	<key>CFBundleShortVersionString</key>
+	<string></string>
+	<key>CFBundleVersion</key>
+	<string></string>
 </dict>
 </plist>
