--- a/iOS/PlatformReadingIos/PlatformReadingIos/PlatformReadingIos.csproj
+++ b/iOS/PlatformReadingIos/PlatformReadingIos/PlatformReadingIos.csproj
@@ -58,6 +58,7 @@
     <MtouchProfiling>true</MtouchProfiling>
     <CodesignEntitlements>Entitlements.plist</CodesignEntitlements>
     <CodesignKey>iPhone Developer</CodesignKey>
+    <CodesignProvision>eb3371a9-99fb-47ae-b4e0-0627e7a1ffcd</CodesignProvision>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|iPhone' ">
     <DebugType>none</DebugType>
@@ -123,6 +124,12 @@
   <ItemGroup>
     <BundleResource Include="Default.png" />
     <BundleResource Include="GameThumbnail.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Content\1.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Content\explode.wav" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
